# pycfx

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.ci/: pull_cfx_image.sh
.cov/: xml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: ci_cd.yml  container-test-run.yml  label.yml
codegen/: allapigen.py  print_cfx_version.py  settingsgen.py
doc/: .vale.ini  Makefile  api_rstgen.py  settings_rstgen.py
doc/changelog.d/: 1.added.md  10.dependencies.md  100.added.md  101.added.md  103.maintenance.md  104.maintenance.md  106.fixed.md  107.maintenance.md  11.fixed.md  115.maintenance.md  116.dependencies.md  119.fixed.md  12.added.md  121.added.md  122.dependencies.md  126.dependencies.md  129.test.md  13.fixed.md  131.fixed.md  133.fixed.md  134.maintenance.md  136.added.md  137.test.md  138.dependencies.md  14.documentation.md  140.maintenance.md  141.maintenance.md  143.test.md  15.documentation.md  16.documentation.md  17.documentation.md  18.documentation.md  19.dependencies.md  20.documentation.md  21.dependencies.md  22.dependencies.md  23.maintenance.md  24.maintenance.md  25.fixed.md  26.fixed.md  (+47 more)
doc/source/: changelog.rst  conf.py  index.rst
doc/source/contributing/: contributing_contents.rst  environment_variables.rst
doc/source/getting_started/: faqs.rst  getting_started_contents.rst  installation.rst
doc/source/user_guide/: launching_cfx.rst  log.rst  session.rst  usability.rst  user_guide_contents.rst
examples/: 01-introductory-example-static-mixer.py  02-fourier-transformation-blade-flutter.py  README.rst
tests/: conftest.py  test_api_version.py  test_batch_ops.py  test_build_version.py  test_cfx_version.py  test_codegen.py  test_download_example_file.py  test_engine_eval.py  test_error_handling.py  test_events_manager.py  test_fldoc.py  test_flobject.py  test_launcher - Copy.py  test_launcher.py  test_logging.py  test_metadata.py  test_post_basic.py  test_post_settings_attrs.py  test_post_settings_functions.py  test_post_settings_state.py  test_pre_basic.py  test_pre_settings_attrs.py  test_pre_settings_functions.py  test_pre_settings_mesh.py  test_pre_settings_state.py  test_search.py  test_session.py  test_solver_basic.py  test_utils.py  test_workflow.py
tests/data/: StaticMixer.def  create_expression.cse  create_expression.cst
tests/util/: common.py  fixtures.py
version/: index.html
version/0.2/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_sources/: changelog.rst.txt
version/0.2/api/: api_contents.html  cfx_connection.html  exceptions.html  get_build_details.html  logging.html  post_processing.html  pre_processing.html  session.html  session_post.html  session_pre.html  session_solver.html  session_utilities.html  solver_controller.html  warnings.html
version/0.2/contributing/: contributing_contents.html
version/0.2/examples/: 01-introductory-example-static-mixer.html  02-fourier-transformation-blade-flutter.html  index.html
version/0.2/getting_started/: faqs.html  getting_started_contents.html  installation.html
version/0.2/user_guide/: environment_variables.html  launching_cfx.html  log.html  session.html  usability.html  user_guide_contents.html
version/0.3/: changelog.html  genindex.html  index.html  py-modindex.html  search.html
version/0.3/api/: api_contents.html  exceptions.html  get_build_details.html  pre_processing.html  warnings.html
version/0.3/examples/: 01-introductory-example-static-mixer.html
version/0.3/getting_started/: getting_started_contents.html
version/0.3/user_guide/: environment_variables.html  launching_cfx.html  log.html  user_guide_contents.html
version/dev/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: changelog.rst.txt
version/dev/api/: api_contents.html  cfx_connection.html  exceptions.html  get_build_details.html  logging.html  post_processing.html  pre_processing.html  session.html  session_post.html  session_pre.html  session_solver.html  session_utilities.html  solver_controller.html  warnings.html
version/dev/contributing/: contributing_contents.html
version/dev/examples/: 01-introductory-example-static-mixer.html  02-fourier-transformation-blade-flutter.html  index.html
version/dev/getting_started/: faqs.html  getting_started_contents.html  installation.html
version/dev/user_guide/: environment_variables.html  launching_cfx.html  log.html  session.html  usability.html  user_guide_contents.html
version/stable/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/_sources/: changelog.rst.txt
version/stable/api/: api_contents.html  cfx_connection.html  exceptions.html  get_build_details.html  logging.html  post_processing.html  pre_processing.html  session.html  session_post.html  session_pre.html  session_solver.html  session_utilities.html  solver_controller.html  (+1 more)
(+20570 files in other folders)
