[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-cfx-core"
version = "0.2.dev0"
description = "PyCFX is a Python wrapper for Ansys CFX, the gold standard CFD software for turbomachinery applications."
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "importlib-metadata>=8.0.0",
    "ansys-api-cfx>=0.3.0",
    "ansys-platform-instancemanagement>=1.0.0",
    "ansys-tools-filetransfer>=0.1,<0.3",
    "ansys-units>=0.10.0",
    "beartype>=0.17,<0.23",
    "docker>=7.1.0",
    "grpcio>=1.30.0",
    "grpcio-health-checking>=1.30.0",
    "h5py==3.16.0",
    "lxml>=6.0.0",
    "nltk>=3.8.1",
    "numpy>=2.2.3",
    "pandas>=2.0.3",
    "platformdirs>=4.2.2",
    "psutil>=7.0.0",
    "pyyaml>=6.0",
    "requests==2.33.1",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
tests = [
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
]
doc = [
    "ansys-sphinx-theme[changelog]>=1.2.7",
    "Sphinx>=8.1.3",
    "numpydoc>=1.7.0",
    "sphinx-copybutton>=0.5.1",
    "sphinxcontrib-openapi==0.9.0",
    "tzdata>=2025.1",
    "pytz>=2025.1",
    "sphinx-design>=0.6.1",
    "sphinx-gallery>=0.15.0",
    "sphinx-jinja>=2.0.2",
    "autodocsumm>=0.2.14",
]
style = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "codespell>=2.2.6",
]

[project.urls]
Documentation = "https://cfx.docs.pyansys.com"
Source = "https://github.com/ansys/pycfx"
Homepage = "https://github.com/ansys/pycfx"
Tracker = "https://github.com/ansys/pycfx/issues"

[tool.flit.module]
name = "ansys.cfx.core"

include = [
    { path = "src/ansys/cfx/core/generated/*/settings_*/*.py", format = ["sdist", "wheel"] },
]

packages = [
    { include = "ansys", from = "src" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
-v
--durations=0
--show-capture=all
-n auto
"""
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::ResourceWarning",
  "ignore::UserWarning",
]
markers = [
    "settings_only: Read and modify the case settings only, without loading the mesh, initializing, or solving the case",
    "nightly: Tests that run under nightly CI",
    "codegen_required: Tests that requires codegen",
    "cfx_version(version): Tests that runs with specified CFX version",
    "standalone: Tests that cannot be run within container"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
skip_glob = [
    "src/ansys/cfx/core/generated"
]
filter_files = "true"
known_first_party = ["ansys"]

[tool.coverage.run]
source = ["ansys/cfx"]
omit = [
    "*/ansys/cfx/core/generated/*",  # Generated API code
    "*/ansys/cfx/core/utils/file_transfer_service.py", # Not yet used
    "*/ansys/cfx/core/launcher/watchdog.py", # Not yet used
    "*/ansys/cfx/core/launcher/watchdog_exec", # Not yet used
]

[tool.codespell]
skip = """
    *.xml,
    ./src/ansys/cfx/core/generated/*,
    """
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"

[tool.coverage.report]
show_missing = true


[tool.towncrier]
package = "ansys.cfx.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/pycfx/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pycfx/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",
    "B105",
    "B106",
    "B110",
    "B112",
    "B301",
    "B307",
    "B310",
    "B311",
    "B314",
    "B403",
    "B404",
    "B405",
    "B602",
    "B603",
    "B604",
    "B607",
    ]
